[package]
name = "orderless"
description = "Orderless/named functions in Rust. `add!(b = 2); // 4`."
version = "0.1.5"
edition = "2021"
authors = ["Kyza"]
license = "MIT"
repository = "https://github.com/Kyza/orderless"
readme = "./README.md"
keywords = ["macro", "orderless", "named", "generator", "proc_macro"]
categories = ["development-tools::build-utils", "rust-patterns"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
darling = "0.20.1"
indexmap = "1.9.3"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.56"
quote = "1.0.27"
syn = { version = "2.0.15", features = ["full"] }

[lib]
proc-macro = true
